# pycounts_svoon

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_svoon/: __init__.py  plotting.py  pycounts_svoon.py
tests/: test_pycounts_svoon.py
