[tool.poetry]
name = "pycounts_svoon"
version = "0.1.0"
description = "Calculate word counts in a text files! Create python package tutorial."
authors = ["Sharon Voon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
